<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="current_job">Current Job</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="edit">Edit</string>
    <string name="georgia_tech">Georgia Tech</string>
    <string name="add">Add</string>
    <string name="atlanta_ga">Atlanta, GA</string>
    <string name="todo">TODO</string>
    <string name="compare_jobs">Compare Jobs</string>
    <string name="_0_offer_s">0 offer(s)</string>
    <string name="job_offers">Job Offers</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="cost_of_living">Cost of Living</string>
    <string name="save">Save</string>
    <string name="noCurrJob">No Current Job Entered</string>
    <string name="offers">%1$d offer(s)</string>
    <string name="editCurrentJob">Edit Current Job</string>
    <string name="addCurrentJob">Add Current Job</string>
    <string name="addJobOffer">Add Job Offer</string>
    <string-array name="job_saved_array">
        <item>Add another Job Offer </item>
        <item>Return to Main Menu</item>
    </string-array>
    <string-array name="job_saved_array_all">
        <item>Add another Job Offer </item>
        <item>Return to Main Menu</item>
        <item>Compare with Current Job</item>
    </string-array>
    <string-array name="states_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jobOfferSaved">Job Offer Saved!</string>
    <string name="yearly_salary">Yearly Salary ($)</string>
    <string name="yearly_bonus">Yearly Bonus ($)</string>
    <string name="gym_allowance">Gym Allowance ($)</string>
    <string name="leave_time">Leave Time</string>
    <string name="weekly_telework">Weekly Telework</string>
    <string name="title_required">Title is required</string>
    <string name="company_required">Company is required</string>
    <string name="city_required">City is required</string>
    <string name="col_positive">Cost of living must be greater than 0</string>
    <string name="col_required">Cost of living is a required number</string>
    <string name="sal_positive">Yearly Salary must be greater than 0</string>
    <string name="sal_required">Yearly Salary is a required number</string>
    <string name="bonus_restrict">Yearly Bonus can\'t be negative</string>
    <string name="bonus_required">Yearly Bonus is a required number</string>
    <string name="tele_restrict">Weekly Telework should be an integer between 0 and 5</string>
    <string name="tele_require">Weekly Telework is a required integer</string>
    <string name="leave_restrict">Leave Time can\'t be negative</string>
    <string name="leave_required">Leave Time is a required integer</string>
    <string name="gym_restrict">Gym Allowance should be a dollar amount between $0 and $500</string>
    <string name="gym_required">Gym Allowance is a required number</string>
</resources>