<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditJobActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/editJobHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:text="@string/textview"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditTitle"
                        android:paddingHorizontal="15dp"
                        android:text="@string/title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditCompany"
                        android:paddingHorizontal="15dp"
                        android:text="@string/company"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditCity"
                        android:paddingHorizontal="15dp"
                        android:text="@string/city"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/spinnerState"
                        android:paddingHorizontal="15dp"
                        android:text="@string/state"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Spinner
                        android:id="@+id/spinnerState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtCostOfLiving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditCostOfLiving"
                        android:paddingHorizontal="15dp"
                        android:text="@string/cost_of_living"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditCostOfLiving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtYearlySalary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditYearlySalary"
                        android:paddingHorizontal="15dp"
                        android:text="@string/yearly_salary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditYearlySalary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtYearlyBonus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditYearlyBonus"
                        android:paddingHorizontal="15dp"
                        android:text="@string/yearly_bonus"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditYearlyBonus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtWeeklyTelework"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditWeeklyTelework"
                        android:paddingHorizontal="15dp"
                        android:text="@string/weekly_telework"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditWeeklyTelework"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtLeaveTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditLeaveTime"
                        android:paddingHorizontal="15dp"
                        android:text="@string/leave_time"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditLeaveTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtGym"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditGymAllowance"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:text="@string/gym_allowance"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditGymAllowance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="onSave"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>